--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "vite": "^3.0.0",
+        "homepage": "https://{ilhamrsdi}.github.io/{pmb}/"
     }
+    
 }
