--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         php-version: '8.0'
         extensions: mbstring, pdo, pgsql, pdo_pgsql
-
+      
     - name: Install Composer dependencies
       uses: actions/cache@v2
       with:
@@ -28,6 +28,9 @@ jobs:
 
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-progress --prefer-dist
+
+    - name: Update Dependencies
+      run: composer update
 
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
