--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       # Step 4: Deploy your files using rsync or SSH command
       - name: Deploy to Server
         run: |
-          rsync -avz --delete-after ./ user@your-server-ip:/path/to/deploy/
+            rsync -avz --delete-after ./ user@192.168.1.100:/path/to/deploy/
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
