--- a/.github/workflows/cpanelDeployment.yml
+++ b/.github/workflows/cpanelDeployment.yml
@@ -1,8 +1,10 @@
 name: Publish Website to CPanel
+
 on:
   push:
     branches:
       - main
+
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
@@ -10,20 +12,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2.1.0
       with:
-        fetch-depth: 2 
+        fetch-depth: 2
 
     - name: Install PHP and Composer
       uses: shivammathur/setup-php@v2
       with:
-          php-version: '8.2' # Adjust to match the PHP version used by your Laravel project
-          tools: 'composer'
+        php-version: '8.2'
+        tools: 'composer'
 
     - name: Install PHP dependencies
-      run: composer install --no-dev --optimize-autoloader
-        
+      run: composer install --no-dev --optimize-autoloader --prefer-dist
+
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        server: ${{ secrets.SERVER }}
+        server: '103.109.210.53'
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
+        protocol: ftp
+        port: 21
+        local-dir: './'
+        server-dir: '/public_html/'
+        log-level: 'verbose'
