--- a/.github/workflows/cpanelDeployment.yml
+++ b/.github/workflows/cpanelDeployment.yml
@@ -55,7 +55,7 @@ jobs:
         php-version: '8.0'
 
     - name: Install Composer Dependencies
-      run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      run: composer update && composer install --no-interaction --prefer-dist --optimize-autoloader
 
     - name: Generate Application Key
       run: php artisan key:generate
