--- a/.github/workflows/cpanelDeployment.yml
+++ b/.github/workflows/cpanelDeployment.yml
@@ -7,6 +7,16 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
+
+    - name: 🛠️ Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.1' # Sesuaikan versi PHP dengan kebutuhan
+        extensions: mbstring, intl, xml, pdo, pdo_mysql # Tambahkan extension yang diperlukan
+        coverage: none
+
+    - name: 🧩 Install Composer Dependencies
+      run: composer install --no-dev --prefer-dist --no-ansi --no-interaction --optimize-autoloader
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
