--- a/.env--l
+++ b/.env--l
@@ -2,7 +2,7 @@ APP_NAME="PMB Poliwangi"
 APP_ENV=production
 APP_KEY=base64:RKJmGpky4biMDK4Ik4UHDKZsXDriu0sPnvZ04F8rP34=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://103.109.210.53/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=103.181.142.162
 DB_PORT=5432
-DB_DATABASE=sim
-DB_USERNAME=postgres
+DB_DATABASE=pmb
+DB_USERNAME=pmb
 DB_PASSWORD=P4ssw0rd
 
 BROADCAST_DRIVER=log
