--- a/.env--l
+++ b/.env--l
@@ -2,18 +2,18 @@ APP_NAME="PMB Poliwangi"
 APP_ENV=production
 APP_KEY=base64:RKJmGpky4biMDK4Ik4UHDKZsXDriu0sPnvZ04F8rP34=
 APP_DEBUG=true
-APP_URL=http://103.109.210.53/
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=103.181.142.162
-DB_PORT=5432
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=pmb
-DB_USERNAME=pmb
-DB_PASSWORD=P4ssw0rd
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
