--- a/.env--mysql
+++ b/.env--mysql
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=dhikabahri4@gmail.com
-MAIL_PASSWORD='kgde ywcw ytoj kbnq'
+MAIL_USERNAME=muhamadilhamrosidi07072000@gmail.com
+MAIL_PASSWORD='bsej alhy zesz sdlr'
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=dhikabahri4@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
