--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,8 @@
 Homestead.json
 Homestead.yaml
 auth.json
-npm-debug.log
+/npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
 /.vscode
-/node_modules
