--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "8.1.2",
+        "php": "^8.0.2",
         "barryvdh/laravel-dompdf": "2.*",
-        "doctrine/dbal": "^4.1",
-        "guzzlehttp/guzzle": "^7.9",
+        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "maatwebsite/excel": "3.*",
-        "xendit/xendit-php": "^6.0"
+        "maatwebsite/excel": "3.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -28,7 +26,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Xendit\\": "vendor/xendit/xendit-php/src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
@@ -67,11 +64,5 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/xendit/xendit-php.git"
-    }
-  ]
+    "prefer-stable": true
 }
