--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
         extensions: mbstring, intl, xml, pdo, pdo_mysql # Tambahkan extension yang diperlukan
         coverage: none
 
-    # - name: 🧩 Install Composer Dependencies
-    #   run: composer install --no-dev -prefer-dist --no-ansi --no-interaction --optimize-autoloader
+    - name: 🧩 Install Composer Dependencies
+      run: composer install --no-dev -prefer-dist --no-ansi --no-interaction --optimize-autoloader
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
