--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
 
     - name: 🧩 Install Composer Dependencies
       if: env.install_needed == 'true'
-      run: composer install --no-dev -prefer-dist --no-ansi --no-interaction --optimize-autoloader
+      run: composer install --no-dev "--prefer-dist" --no-ansi --no-interaction --optimize-autoloader
+
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
